<?xml version="1.0"?>
<package>
  <name>feature_matcher</name>
  <version>0.0.0</version>
  <description>The simple stage planner package</description>
  <maintainer email="aminin@todo.todo">aminin</maintainer>


  <license>TODO</license>

  <buildtool_depend>colcon</buildtool_depend>
  <build_depend>rclcpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>tf2</build_depend>
  <build_depend>cmake_modules</build_depend>
  <run_depend>rclcpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>tf2</run_depend>

<export>
  <build_type>ament_cmake</build_type>
</export>

</package>
