<?xml version="1.0"?>
<package>
  <name>stage_controller</name>
  <version>0.0.0</version>
  <description>The car like stage controller package</description>

  <maintainer email="aminin@todo.todo">aminin</maintainer>

  <license>TODO</license>

  <buildtool_depend>colcon</buildtool_depend>
  <build_depend>rclcpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <run_depend>rclcpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>

<export>
  <build_type>ament_cmake</build_type>
</export>

</package>
